# swagger-codegen/node/wordcount_search2/api/swagger.yaml
@@ -1,23 +1,23 @@
 ---
 swagger: "2.0"
 info:
-  description: "This is a sample server Petstore server.  You can find out more about\
+  description: "This is a sample server Spark server.  You can find out more about\
     \ Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).\
     \  For this sample, you can use the api key `special-key` to test the authorization\
     \ filters."
-  version: "1.0.0"
-  title: "Swagger Petstore"
+  version: "0.0.1"
+  title: "wordcount_search2.py"
   termsOfService: "http://swagger.io/terms/"
   contact:
-    email: "apiteam@swagger.io"
+    email: "ghwlchlaks@naver.com"
   license:
     name: "Apache-2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 host: "zest3:3000"
-basePath: "/v2"
+basePath: "/client/v2"
 tags:
-- name: "sparkSubmit"
-  description: "Everything about your Pets"
+- name: "wordcount_search2.py"
+  description: "Apps that count the number of specific characters"
   externalDocs:
     description: "Find out more"
     url: "http://192.168.2.13:3000"
@@ -33,9 +33,9 @@ paths:
     post:
       tags:
       - "sparkSubmit"
-      summary: "Add a new pet to the store"
+      summary: "apps description"
       description: ""
-      operationId: "sparkSubmit"
+      operationId: "wordcount_search2.py"
       consumes:
       - "application/json"
       - "application/xml"
@@ -45,7 +45,7 @@ paths:
       parameters:
       - in: "body"
         name: "body"
-        description: "spark object that needs to be needed to the run"
+        description: "apps description"
         required: true
         schema:
           $ref: "#/definitions/Spark"
@@ -54,6 +54,10 @@ paths:
           description: "successful operation"
         400:
           description: "Invalid status value"
+        404:
+          description: "not found"
+        500:
+          description: "server error"
       security:
       - petstore_auth:
         - "write:pets"
@@ -78,9 +82,6 @@ definitions:
     - "target"
     - "user"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
       email:
         type: "string"
         example: "ghwlchlaks"
@@ -96,13 +97,6 @@ definitions:
       APP:
         type: "string"
         example: "wordcount_search.py"
-      status:
-        type: "string"
-        description: "pet status in the store"
-        enum:
-        - "available"
-        - "pending"
-        - "sold"
     title: "A spark"
     xml:
       name: "Spark"
@@ -113,7 +107,6 @@ definitions:
       parameter: "--word A"
       target: "email"
       user: "ghwlchlaks@naver.com"
-      status: "available"
       APP: "wordcount_search.py"
 externalDocs:
   description: "Find out more about Swagger"
